--- a/Aboutme/app/src/main/res/layout/part_social.xml
+++ b/Aboutme/app/src/main/res/layout/part_social.xml
@@ -1,4 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="@dimen/margin"
+    android:layout_marginTop="@dimen/margin"
+    android:layout_marginEnd="@dimen/margin"
+    android:layout_gravity="bottom"
+    android:gravity="center"
+    android:orientation="horizontal">
 
-</merge>
+    <ImageButton
+        android:id="@+id/facebook"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin"
+        android:layout_marginBottom="@dimen/margin"
+        android:layout_marginEnd="@dimen/margin"
+        android:adjustViewBounds="true"
+        android:maxHeight="@dimen/icon_size"
+        android:maxWidth="@dimen/icon_size"
+        android:src="@drawable/facebook"/>
+
+    <ImageButton
+        android:id="@+id/google"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin"
+        android:layout_marginBottom="@dimen/margin"
+        android:layout_marginEnd="@dimen/margin"
+        android:adjustViewBounds="true"
+        android:maxHeight="@dimen/icon_size"
+        android:maxWidth="@dimen/icon_size"
+        android:src="@drawable/google_plus"/>
+
+    <ImageButton
+        android:id="@+id/instagram"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin"
+        android:layout_marginBottom="@dimen/margin"
+        android:layout_marginEnd="@dimen/margin"
+        android:adjustViewBounds="true"
+        android:maxHeight="@dimen/icon_size"
+        android:maxWidth="@dimen/icon_size"
+        android:src="@drawable/instagram"/>
+
+    <ImageButton
+        android:id="@+id/whatsapp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin"
+        android:layout_marginBottom="@dimen/margin"
+        android:layout_marginEnd="@dimen/margin"
+        android:adjustViewBounds="true"
+        android:maxHeight="@dimen/icon_size"
+        android:maxWidth="@dimen/icon_size"
+        android:src="@drawable/whatsapp"/>
+
+    <ImageButton
+        android:id="@+id/twitter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin"
+        android:layout_marginBottom="@dimen/margin"
+        android:layout_marginEnd="@dimen/margin"
+        android:adjustViewBounds="true"
+        android:maxHeight="@dimen/icon_size"
+        android:maxWidth="@dimen/icon_size"
+        android:src="@drawable/twitter"/>
+
+    <ImageButton
+        android:id="@+id/youtube"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin"
+        android:layout_marginBottom="@dimen/margin"
+        android:adjustViewBounds="true"
+        android:maxHeight="@dimen/icon_size"
+        android:maxWidth="@dimen/icon_size"
+        android:src="@drawable/youtube"/>
+
+</LinearLayout>
