--- a/Aboutme/app/src/main/res/values/dimens.xml
+++ b/Aboutme/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="margin">16dp</dimen>
     <dimen name="text_size">16sp</dimen>
     <dimen name="pad8">8dp</dimen>
+    <dimen name="icon_size">48dp</dimen>
+    <dimen name="icon_size32dp">32dp</dimen>
 </resources>
