--- a/Aboutme/app/src/main/res/layout/activity_settings.xml
+++ b/Aboutme/app/src/main/res/layout/activity_settings.xml
@@ -83,6 +83,7 @@
             android:id="@+id/submit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin"
             android:background="#6C8BC34A"
             android:layout_gravity="center|bottom"
             android:text="@string/save" />
