--- a/Aboutme/app/src/main/res/layout/part_interest.xml
+++ b/Aboutme/app/src/main/res/layout/part_interest.xml
@@ -9,7 +9,60 @@
     android:layout_marginEnd="@dimen/margin"
     android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/tw_hobbies"
+        android:padding="@dimen/pad8"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:text="@string/you_loving_hobbies"/>
 
+    <EditText
+        android:id="@+id/et_hobbies"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:padding="@dimen/pad8"
+        android:inputType="textMultiLine"/>
 
+    <TextView
+        android:id="@+id/tw_loving_books"
+        android:padding="@dimen/pad8"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:text="@string/loving_books"/>
+
+    <EditText
+        android:id="@+id/et_loving_books"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:padding="@dimen/pad8"
+        android:inputType="textMultiLine"/>
+
+    <TextView
+        android:id="@+id/tw_loving_movies"
+        android:padding="@dimen/pad8"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:text="@string/loving_movies"/>
+
+    <EditText
+        android:id="@+id/et_loving_movies"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:padding="@dimen/pad8"
+        android:inputType="textMultiLine"/>
+
+    <TextView
+        android:id="@+id/tw_loving_music"
+        android:padding="@dimen/pad8"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:text="@string/loving_music"/>
+
+    <EditText
+        android:id="@+id/et_loving_music"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:padding="@dimen/pad8"
+        android:inputType="textMultiLine"/>
 
 </LinearLayout>
