--- a/Aboutme/app/src/main/res/layout/part_photo_picker.xml
+++ b/Aboutme/app/src/main/res/layout/part_photo_picker.xml
@@ -9,5 +9,11 @@
     android:layout_marginEnd="@dimen/margin"
     android:orientation="vertical">
 
+    <ListView
+        android:id="@+id/lv_photos"
+        android:scrollbars="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
 
 </LinearLayout>
