--- a/Aboutme/app/src/main/res/layout/part_photo_picker.xml
+++ b/Aboutme/app/src/main/res/layout/part_photo_picker.xml
@@ -9,9 +9,9 @@
     android:layout_marginEnd="@dimen/margin"
     android:orientation="vertical">
 
-    <ListView
-        android:id="@+id/lv_photos"
-        android:scrollbars="horizontal"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_photos"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
