--- a/Aboutme/app/src/main/res/layout/activity_additional_info.xml
+++ b/Aboutme/app/src/main/res/layout/activity_additional_info.xml
@@ -6,4 +6,10 @@
     android:orientation="vertical"
     tools:context=".AdditionalInfo">
 
+    <TextView
+        android:id="@+id/tw_info_about"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="@dimen/margin"/>
+
 </LinearLayout>
