--- a/Aboutme/app/src/main/res/layout/activity_settings.xml
+++ b/Aboutme/app/src/main/res/layout/activity_settings.xml
@@ -69,7 +69,7 @@
             android:visibility="gone"/>
 
         <Button
-            android:id="@+id/submit"
+            android:id="@+id/b_save"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin"
