--- a/Aboutme/app/src/main/res/layout/part_social_settings.xml
+++ b/Aboutme/app/src/main/res/layout/part_social_settings.xml
@@ -1,58 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/ll_group5"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_gravity="bottom"
     android:layout_marginStart="@dimen/margin"
     android:layout_marginTop="@dimen/margin"
     android:layout_marginEnd="@dimen/margin"
-    android:layout_gravity="bottom"
     android:gravity="center"
     android:orientation="vertical">
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/margin"
-    android:orientation="horizontal">
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:maxHeight="@dimen/icon_size32dp"
-        android:maxWidth="@dimen/icon_size32dp"
-        android:src="@drawable/facebook"/>
-
-    <EditText
-        android:id="@+id/et_facebook"
-        android:layout_width="match_parent"
-        android:layout_height="32dp"
-        android:padding="@dimen/pad8"
-        android:inputType="text"/>
-
-</LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/margin"
-        android:orientation="horizontal">
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:maxHeight="@dimen/icon_size32dp"
-        android:maxWidth="@dimen/icon_size32dp"
-        android:src="@drawable/google_plus"/>
-
-    <EditText
-        android:id="@+id/et_google"
-        android:layout_width="match_parent"
-        android:layout_height="32dp"
-        android:padding="@dimen/pad8"
-        android:inputType="text"/>
-
-</LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -60,21 +17,68 @@
         android:orientation="horizontal">
 
         <ImageView
-        android:layout_width="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:maxWidth="@dimen/icon_size32dp"
+            android:maxHeight="@dimen/icon_size32dp"
+            android:src="@drawable/facebook" />
+
+        <EditText
+            android:id="@+id/et_facebook"
+            android:layout_width="match_parent"
+            android:layout_height="32dp"
+            android:inputType="text"
+            android:padding="@dimen/pad8" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:maxHeight="@dimen/icon_size32dp"
-        android:maxWidth="@dimen/icon_size32dp"
-        android:src="@drawable/instagram"/>
+        android:layout_marginBottom="@dimen/margin"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:maxWidth="@dimen/icon_size32dp"
+            android:maxHeight="@dimen/icon_size32dp"
+            android:src="@drawable/google_plus" />
+
+        <EditText
+            android:id="@+id/et_google"
+            android:layout_width="match_parent"
+            android:layout_height="32dp"
+            android:inputType="text"
+            android:padding="@dimen/pad8" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/margin"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:maxWidth="@dimen/icon_size32dp"
+            android:maxHeight="@dimen/icon_size32dp"
+            android:src="@drawable/instagram" />
 
         <EditText
             android:id="@+id/et_instagram"
             android:layout_width="match_parent"
             android:layout_height="32dp"
-            android:padding="@dimen/pad8"
-            android:inputType="text"/>
+            android:inputType="text"
+            android:padding="@dimen/pad8" />
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -82,21 +86,22 @@
         android:orientation="horizontal">
 
         <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:maxHeight="@dimen/icon_size32dp"
-        android:maxWidth="@dimen/icon_size32dp"
-        android:src="@drawable/whatsapp"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:maxWidth="@dimen/icon_size32dp"
+            android:maxHeight="@dimen/icon_size32dp"
+            android:src="@drawable/whatsapp" />
 
         <EditText
             android:id="@+id/et_whatsup"
             android:layout_width="match_parent"
             android:layout_height="32dp"
-            android:padding="@dimen/pad8"
-            android:inputType="text"/>
+            android:inputType="text"
+            android:padding="@dimen/pad8" />
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -104,21 +109,22 @@
         android:orientation="horizontal">
 
         <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:maxHeight="@dimen/icon_size32dp"
-        android:maxWidth="@dimen/icon_size32dp"
-        android:src="@drawable/twitter"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:maxWidth="@dimen/icon_size32dp"
+            android:maxHeight="@dimen/icon_size32dp"
+            android:src="@drawable/twitter" />
 
         <EditText
             android:id="@+id/et_twitter"
             android:layout_width="match_parent"
             android:layout_height="32dp"
-            android:padding="@dimen/pad8"
-            android:inputType="text"/>
+            android:inputType="text"
+            android:padding="@dimen/pad8" />
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -126,19 +132,19 @@
         android:orientation="horizontal">
 
         <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:maxHeight="@dimen/icon_size32dp"
-        android:maxWidth="@dimen/icon_size32dp"
-        android:src="@drawable/youtube"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:maxWidth="@dimen/icon_size32dp"
+            android:maxHeight="@dimen/icon_size32dp"
+            android:src="@drawable/youtube" />
 
         <EditText
             android:id="@+id/et_youtube"
             android:layout_width="match_parent"
             android:layout_height="32dp"
-            android:padding="@dimen/pad8"
-            android:inputType="text"/>
+            android:inputType="text"
+            android:padding="@dimen/pad8" />
 
     </LinearLayout>
 </LinearLayout>
