--- a/Aboutme/app/src/main/res/layout/activity_main.xml
+++ b/Aboutme/app/src/main/res/layout/activity_main.xml
@@ -1,36 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
     <TextView
         android:id="@+id/tw_invitation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin"
-        android:layout_marginStart="@dimen/margin"
-        android:layout_marginEnd="@dimen/margin"
-        android:layout_alignParentTop="true"
+        android:layout_margin="@dimen/margin"
+        android:layout_gravity="top"
         android:textAlignment="center"
-        android:textSize="@dimen/text_size" />
+        android:textSize="@dimen/text_size"/>
 
     <ImageView
         android:id="@+id/iv_photo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_marginStart="@dimen/margin"
-        android:layout_marginEnd="@dimen/margin"
-        android:layout_marginTop="@dimen/margin"
-        android:layout_below="@id/tw_invitation"
-        android:layout_gravity="top"/>
+        android:layout_marginEnd="@dimen/margin" />
 
     <Button
         android:id="@+id/b_info_text"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center_horizontal"
         android:layout_margin="@dimen/margin"
-        android:layout_alignParentBottom="true"
         android:text="@string/b_info_text"/>
 
-</RelativeLayout>
+</LinearLayout>
