Added code for AdditionalActivity and changed a few little bags

--- a/Aboutme/app/src/main/res/layout/activity_additional_info.xml
+++ b/Aboutme/app/src/main/res/layout/activity_additional_info.xml
@@ -1,15 +1,170 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".AdditionalInfo">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tw_info_about"
+    <LinearLayout
+        android:id="@+id/ll_add_info"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="@dimen/margin"/>
+        android:layout_height="wrap_content"
+        android:padding="@dimen/padding16dp"
+        android:orientation="vertical"
+        tools:context=".AdditionalInfo">
 
-</LinearLayout>
+        <TextView
+            android:padding="@dimen/pad8"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/color_sliders"
+            android:textStyle="bold"
+            android:typeface="sans"
+            android:textAlignment="textStart"
+            android:text="@string/address" />
+        <TextView
+            android:id="@+id/tw_address_info"
+            android:padding="@dimen/pad8"
+            android:textSize="@dimen/text_size"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:padding="@dimen/pad8"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/color_sliders"
+            android:textStyle="bold"
+            android:typeface="sans"
+            android:textAlignment="textStart"
+            android:layout_marginTop="@dimen/margin"
+            android:text="@string/phonenumber"/>
+        <TextView
+            android:id="@+id/tw_phonenumber_info"
+            android:padding="@dimen/pad8"
+            android:textSize="@dimen/text_size"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:padding="@dimen/pad8"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/color_sliders"
+            android:textStyle="bold"
+            android:typeface="sans"
+            android:textAlignment="textStart"
+            android:layout_marginTop="@dimen/margin"
+            android:text="@string/email"/>
+        <TextView
+            android:id="@+id/tw_email_info"
+            android:padding="@dimen/pad8"
+            android:textSize="@dimen/text_size"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:padding="@dimen/pad8"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/color_sliders"
+            android:textStyle="bold"
+            android:typeface="sans"
+            android:textAlignment="textStart"
+            android:layout_marginTop="@dimen/margin"
+            android:text="@string/work"/>
+        <TextView
+            android:id="@+id/tw_work_info"
+            android:padding="@dimen/pad8"
+            android:textSize="@dimen/text_size"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:padding="@dimen/pad8"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/color_sliders"
+            android:textStyle="bold"
+            android:typeface="sans"
+            android:textAlignment="textStart"
+            android:layout_marginTop="@dimen/margin"
+            android:text="@string/university"/>
+        <TextView
+            android:id="@+id/tw_study_info"
+            android:padding="@dimen/pad8"
+            android:textSize="@dimen/text_size"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:padding="@dimen/pad8"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/color_sliders"
+            android:textStyle="bold"
+            android:typeface="sans"
+            android:textAlignment="textStart"
+            android:layout_marginTop="@dimen/margin"
+            android:text="@string/loving_hobbis"/>
+        <TextView
+            android:id="@+id/tw_hobbies_info"
+            android:padding="@dimen/pad8"
+            android:textSize="@dimen/text_size"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:padding="@dimen/pad8"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/color_sliders"
+            android:textStyle="bold"
+            android:typeface="sans"
+            android:textAlignment="textStart"
+            android:layout_marginTop="@dimen/margin"
+            android:text="@string/loving_books"/>
+        <TextView
+            android:id="@+id/tw_loving_books_info"
+            android:padding="@dimen/pad8"
+            android:textSize="@dimen/text_size"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:padding="@dimen/pad8"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/color_sliders"
+            android:textStyle="bold"
+            android:typeface="sans"
+            android:textAlignment="textStart"
+            android:layout_marginTop="@dimen/margin"
+            android:text="@string/loving_movies"/>
+        <TextView
+            android:id="@+id/tw_loving_movies_info"
+            android:padding="@dimen/pad8"
+            android:textSize="@dimen/text_size"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:padding="@dimen/pad8"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/color_sliders"
+            android:textStyle="bold"
+            android:typeface="sans"
+            android:textAlignment="textStart"
+            android:layout_marginTop="@dimen/margin"
+            android:text="@string/loving_music"/>
+        <TextView
+            android:id="@+id/tw_loving_music_info"
+            android:padding="@dimen/pad8"
+            android:textSize="@dimen/text_size"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="?android:attr/listDivider" />
+
+        <include layout="@layout/part_social" />
+    </LinearLayout>
+</ScrollView>
