--- a/Aboutme/app/src/main/res/values/dimens.xml
+++ b/Aboutme/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="pad8">8dp</dimen>
     <dimen name="icon_size">48dp</dimen>
     <dimen name="icon_size32dp">32dp</dimen>
+    <dimen name="padding16dp">16dp</dimen>
 </resources>
