--- a/Aboutme/app/src/main/res/layout/activity_main.xml
+++ b/Aboutme/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,8 @@
         android:id="@+id/iv_photo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:maxHeight="500dp"
+        android:maxWidth="500dp"
         android:layout_marginTop="@dimen/margin"
         android:layout_gravity="center_horizontal"
         android:layout_marginStart="@dimen/margin"
