--- a/Aboutme/app/src/main/res/layout/activity_main.xml
+++ b/Aboutme/app/src/main/res/layout/activity_main.xml
@@ -1,49 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/activity_main1"
+    android:tag="short_info_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/iv_photo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:maxHeight="500dp"
-        android:maxWidth="500dp"
-        android:layout_marginTop="@dimen/margin"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginStart="@dimen/margin"
-        android:layout_marginEnd="@dimen/margin" />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/tw_invitation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin"
-            android:layout_alignParentTop="true"
-            android:textAlignment="center"
-            android:textStyle="bold"
-            android:textSize="@dimen/text_size"/>
-        <TextView
-            android:id="@+id/birthday"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tw_invitation"
-            android:textAlignment="center"
-            android:textSize="@dimen/text_size"/>
-    </RelativeLayout>
-
-    <Button
-        android:id="@+id/b_info_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center_horizontal"
-        android:layout_margin="@dimen/margin"
-        android:text="@string/b_info_text"/>
-
-</LinearLayout>
+</FrameLayout>
