--- a/Aboutme/app/src/main/res/menu/menu.xml
+++ b/Aboutme/app/src/main/res/menu/menu.xml
@@ -2,6 +2,5 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/menu_settings"
-        android:title="@string/change_info"
-        android:onClick="setInfo"/>
+        android:title="@string/change_info" />
 </menu>
