--- a/Aboutme/app/src/main/res/values/dimens.xml
+++ b/Aboutme/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="icon_size">48dp</dimen>
     <dimen name="icon_size32dp">32dp</dimen>
     <dimen name="padding16dp">16dp</dimen>
+    <dimen name="elevation">8dp</dimen>
 </resources>
