Add support Firebase: Analytics and Crashlytics

--- a/Aboutme/app/src/main/res/menu/menu.xml
+++ b/Aboutme/app/src/main/res/menu/menu.xml
@@ -3,4 +3,7 @@
     <item
         android:id="@+id/menu_settings"
         android:title="@string/change_info" />
+    <item
+        android:id="@+id/crash_menu_item"
+        android:title="@string/crash_app"/>
 </menu>
