--- a/Aboutme/app/src/main/res/layout/fragment_info_short.xml
+++ b/Aboutme/app/src/main/res/layout/fragment_info_short.xml
@@ -11,6 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:maxWidth="500dp"
+        android:maxHeight="500dp"
         android:layout_marginStart="@dimen/margin"
         android:layout_marginTop="@dimen/margin"
         android:layout_marginEnd="@dimen/margin" />
