--- a/Aboutme/app/src/main/res/layout/activity_main.xml
+++ b/Aboutme/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/activity_main1"
     android:tag="short_info_layout"
+    android:padding="@dimen/padding16dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
