--- a/Aboutme/app/src/main/res/layout/activity_main_land.xml
+++ b/Aboutme/app/src/main/res/layout/activity_main_land.xml
@@ -2,16 +2,18 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <FrameLayout
         android:id="@+id/activity_main1"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:foregroundGravity="center"
         android:tag="short_info_layout"
+        app:layout_constraintDimensionRatio="0.7"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/activity_main2"
         app:layout_constraintHorizontal_chainStyle="packed"
@@ -27,6 +29,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/activity_main1"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" >
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
