--- a/Aboutme/app/src/main/res/values/dimens.xml
+++ b/Aboutme/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="icon_size32dp">32dp</dimen>
     <dimen name="padding16dp">16dp</dimen>
     <dimen name="elevation">8dp</dimen>
+    <dimen name="margin8dp">8dp</dimen>
 </resources>
