--- a/Aboutme/app/src/main/res/layout/fragment_info_short.xml
+++ b/Aboutme/app/src/main/res/layout/fragment_info_short.xml
@@ -13,7 +13,7 @@
         android:layout_height="0dp"
         android:adjustViewBounds="true"
         android:contentDescription="@string/personal_photo"
-        android:scaleType="centerInside"
+        android:scaleType="fitCenter"
         app:layout_constraintDimensionRatio="1.1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
