--- a/Aboutme/app/src/main/res/layout/part_main_info.xml
+++ b/Aboutme/app/src/main/res/layout/part_main_info.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/ll_group1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -62,43 +63,40 @@
             android:text="@string/woman" />
     </RadioGroup>
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <TextView
             android:id="@+id/tw_birthday_info"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="@dimen/icon_size"
-            android:layout_alignParentStart="true"
+            android:gravity="center_vertical"
             android:padding="@dimen/pad8"
             android:text="@string/birthday"
-            android:gravity="center_vertical"/>
+            app:layout_constraintEnd_toStartOf="@id/tw_birthday"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tw_birthday"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="@dimen/icon_size"
             android:layout_marginStart="@dimen/margin"
-            android:layout_alignEnd="@+id/tw_birthday_info"
-            android:gravity="center_vertical"
-            android:text=""
-            android:textAlignment="center"
-            android:padding="@dimen/pad8" />
+            android:gravity="center_vertical|end"
+            android:padding="@dimen/pad8"
+            app:layout_constraintEnd_toStartOf="@id/ib_date"
+            app:layout_constraintStart_toEndOf="@id/tw_birthday_info"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/ib_date"
-            android:background="@android:color/transparent"
-            android:layout_width="@dimen/icon_size32dp"
-            android:layout_height="@dimen/icon_size32dp"
-            android:layout_marginStart="@dimen/margin"
-            android:layout_alignParentEnd="true"
-            android:layout_alignEnd="@id/tw_birthday"
-            android:layout_gravity="end"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
-            android:src="@drawable/date" />
-
-    </RelativeLayout>
+            style="@style/Aboutme_icon_style"
+            android:src="@drawable/icon_calendar"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@id/tw_birthday"
+            app:layout_constraintEnd_toEndOf="parent"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </LinearLayout>
