--- a/Aboutme/app/src/main/res/layout/part_social_settings.xml
+++ b/Aboutme/app/src/main/res/layout/part_social_settings.xml
@@ -17,11 +17,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:maxWidth="@dimen/icon_size32dp"
-            android:maxHeight="@dimen/icon_size32dp"
+            style="@style/Aboutme_icon_style32dp"
             android:src="@drawable/facebook" />
 
         <EditText
@@ -40,11 +36,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:maxWidth="@dimen/icon_size32dp"
-            android:maxHeight="@dimen/icon_size32dp"
+            style="@style/Aboutme_icon_style32dp"
             android:src="@drawable/google" />
 
         <EditText
@@ -63,11 +55,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:maxWidth="@dimen/icon_size32dp"
-            android:maxHeight="@dimen/icon_size32dp"
+            style="@style/Aboutme_icon_style32dp"
             android:src="@drawable/instagram" />
 
         <EditText
@@ -86,11 +74,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:maxWidth="@dimen/icon_size32dp"
-            android:maxHeight="@dimen/icon_size32dp"
+            style="@style/Aboutme_icon_style32dp"
             android:src="@drawable/whatsapp" />
 
         <EditText
@@ -109,11 +93,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:maxWidth="@dimen/icon_size32dp"
-            android:maxHeight="@dimen/icon_size32dp"
+            style="@style/Aboutme_icon_style32dp"
             android:src="@drawable/twitter" />
 
         <EditText
@@ -132,11 +112,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:maxWidth="@dimen/icon_size32dp"
-            android:maxHeight="@dimen/icon_size32dp"
+            style="@style/Aboutme_icon_style32dp"
             android:src="@drawable/youtube" />
 
         <EditText
