--- a/Aboutme/app/src/main/res/values/styles.xml
+++ b/Aboutme/app/src/main/res/values/styles.xml
@@ -9,6 +9,8 @@
     </style>
 
     <style name="TextView_title_style">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:typeface">sans</item>
         <item name="android:textSize">@dimen/text_size</item>
         <item name="android:textStyle">bold</item>
@@ -18,8 +20,27 @@
     </style>
 
     <style name="TextView_item_style">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">@dimen/text_size</item>
         <item name="android:padding">@dimen/pad8</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
+
+    <style name="Aboutme_icon_style">
+        <item name="android:layout_width">@dimen/icon_size</item>
+        <item name="android:layout_height">@dimen/icon_size</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:adjustViewBounds">true</item>
+        <item name="android:scaleType">fitCenter</item>
+    </style>
+
+    <style name="Aboutme_icon_style32dp">
+        <item name="android:layout_width">@dimen/icon_size32dp</item>
+        <item name="android:layout_height">@dimen/icon_size32dp</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:adjustViewBounds">true</item>
+        <item name="android:scaleType">fitCenter</item>
     </style>
 
 </resources>
